flapivor/tests/m3/hopix/typechecker/good/17-polymorphic-binary-function.hopix
def fst : forall a, b. a * b -> a (x, y) = x

val main : Int = fst<Int, Char> (37, 'a')