flapivor/tests/m3/hopix/typechecker/bad/51-constructor-07.hopix
type T<a> = A(a, a)

val main : T<Int> = A<Int>(0, "String")